--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@ body {
 }
 
 .search-wrapper {
+  margin-top: 12px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,4 +18,45 @@ body {
 .search-input {
   width: 50%;
   margin-bottom: 12px;
+}
+
+.content-wrapper {
+  padding: 40px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.date-wrapper {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightsteelblue;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.month {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.day {
+  margin-top: 16px;
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.year {
+  margin-top: 16px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
 }
