--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,6 +41,27 @@ body {
   padding: 8px;
 }
 
+.happening-wrapper {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: greenyellow;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 4px;
+  padding: 42px 0;
+  height: max-content;
+}
+
+.happening {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
 .month {
   color: white;
   font-size: 16px;
