--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,7 @@
   padding: 0 8px;
   width: 100%;
   height: 60px;
-  background-color: #2b6ea4;
+  background-color: #101e42;
   display: flex;
   flex-direction: row;
   align-items: center;
