--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,3 +14,24 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.last-fetch-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.fetch-text {
+  color: white;
+  font-size: 12px;
+  line-height: 14px;
+  margin-right: 8px;
+}
+
+.fetch-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
