--- a/src/styles/matchesViewer.css
+++ b/src/styles/matchesViewer.css
@@ -6,18 +6,34 @@ body {
   padding: 8px;
 }
 
-.search-wrapper {
+.search-filter-wrapper {
   margin-top: 12px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.search-wrapper {
+  width: 100%;
+  margin-bottom: 12px;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .search-input {
   width: 50%;
+  margin-right: 12px;
+}
+
+.filter-wrapper {
   margin-bottom: 12px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .content-wrapper {
